--- a/client_reviews.html
+++ b/client_reviews.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="modal-body">
+  <div class="modal-body pt-0">
     <!-- HEADER -->
     <div class="row py-2-ov table-dark margin-bt">
       <div class="col-sm-6">
@@ -28,43 +28,41 @@
     </div>
     <!-- END HEADER -->
 
-    <div class="row px-5">
+    <div class="row">
       <div class="col-xl-12">
-        <table class="table-white table-responsive-md">
+        <table class="table-white custable js-table-data">
 
           <thead>
             <tr>
-              <td>&nbsp;</td>
-              <td class="text-center-bold th-md">
+              <th class="text-center-bold th-md">
                 <h6>Date</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>Client Name (average)</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>Region</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>Trading with LCP</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>Ticket reference</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>Type of ticket</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>LCP CS</h6>
-              </td>
-              <td class="text-center-bold th-md">
+              </th>
+              <th class="text-center-bold th-md">
                 <h6>Star rating</h6>
-              </td>
+              </th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -74,8 +72,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -85,8 +82,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -96,8 +92,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -107,8 +102,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -118,8 +112,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -129,8 +122,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -140,8 +132,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -151,8 +142,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -162,8 +152,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -173,8 +162,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -184,8 +172,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -195,8 +182,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -206,8 +192,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -217,8 +202,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -228,8 +212,7 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;">&#9734;</span></td>
-              <td class="text-center px-2">01.01.2019</td>
+              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -245,6 +228,27 @@
     </div>
 
   </div><!-- <div class="modal-body"> -->
+
+          <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+          <!-- <script src='responsive-table.js'></script> -->
+
+          <script>
+            $(document).ready(function() {
+              $('.js-table-data').each(function() {
+                table = $(this);
+                tableRow = table.find('tr');
+                table.find('td').each(function() {
+                  tdIndex = $(this).index();
+                  if ($(tableRow).find('th').eq(tdIndex).attr('data-label')) {
+                    thText = $(tableRow).find('th').eq(tdIndex).data('label');
+                  } else {
+                    thText = $(tableRow).find('th').eq(tdIndex).text();
+                  }
+                  $(this).attr('data-label', thText + ':');
+                });
+              });
+            });
+          </script>
 </body>
 
 </html>
