--- a/network-efficiency-summary.html
+++ b/network-efficiency-summary.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="modal-body">
+  <div class="modal-body pt-0">
     <!-- HEADER -->
     <div class="row py-2-ov table-dark margin-bt">
       <div class="col-sm-6">
@@ -67,7 +67,7 @@
           <table>
             <thead>
               <tr>
-                <th>Most Profitable Route</th>
+                <th><h6>Most Profitable Route</h6></th>
               </tr>
             </thead>
             <tbody>
@@ -88,7 +88,7 @@
           <table>
             <thead>
               <tr>
-                <th>Least Profitable Route</th>
+                <th><h6>Least Profitable Route</h6></th>
               </tr>
             </thead>
             <tbody>
@@ -109,7 +109,7 @@
           <table>
             <thead>
               <tr>
-                <th>Most Efficient Route</th>
+                <th><h6>Most Efficient Route</h6></th>
               </tr>
             </thead>
             <tbody>
@@ -130,7 +130,7 @@
           <table>
             <thead>
               <tr>
-                <th>Least Efficient Route</th>
+                <th><h6>Least Efficient Route</h6></th>
               </tr>
             </thead>
             <tbody>
@@ -151,7 +151,7 @@
           <table>
             <thead>
               <tr>
-                <th>Busiest Route</th>
+                <th><h6>Busiest Route</h6></th>
               </tr>
             </thead>
             <tbody>
