--- a/driver-app-non-compliance.html
+++ b/driver-app-non-compliance.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="modal-body">
+  <div class="modal-body pt-0">
     <!-- HEADER -->
     <div class="row py-2-ov table-dark margin-bt">
       <div class="col-sm-6">
