--- a/mission-control-shipping.html
+++ b/mission-control-shipping.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="modal-body">
+  <div class="modal-body pt-0">
     <!-- HEADER -->
     <div class="row py-2-ov table-dark">
       <div class="col-sm-6">
