--- a/regional-progression-ten-week.html
+++ b/regional-progression-ten-week.html
@@ -45,7 +45,7 @@
             <td class="th-sm">WK 5 (Vol / Clients)</td>
             <td class="th-sm">WK 6 (Vol / Clients)</td>
             <td class="th-sm">WK 7 (Vol / Clients)</td>
-            <td class="th-sm">WK 8 (Vol / Clients)/td>
+            <td class="th-sm">WK 8 (Vol / Clients)</td>
             <td class="th-sm">WK 9 (Vol / Clients)</td>
             <td class="th-sm">WK 10 (Vol / Clients)</td>
             <td class="th-sm">Average</td>
