--- a/highest-use-of-ticket.html
+++ b/highest-use-of-ticket.html
@@ -39,6 +39,7 @@
         <table class="custable js-table-data">
           <thead>
             <tr>
+              <th>&nbsp;</th>
               <th class="th-md">Client name</th>
               <th class="th-sm">Region</th>
               <th class="th-md">Trading with LCP</th>
@@ -51,7 +52,8 @@
           </thead>
           <tbody>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+              <td><i class="far fa-frown mr-2 orange-text pr-2"></i></td>
+              <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
               <td>200</td>
@@ -67,27 +69,6 @@
     </div>
 
   </div><!-- <div class="modal-body"> -->
-
-      <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-      <!-- <script src='responsive-table.js'></script> -->
-
-      <script>
-        $(document).ready(function() {
-          $('.js-table-data').each(function() {
-            table = $(this);
-            tableRow = table.find('tr');
-            table.find('td').each(function() {
-              tdIndex = $(this).index();
-              if ($(tableRow).find('th').eq(tdIndex).attr('data-label')) {
-                thText = $(tableRow).find('th').eq(tdIndex).data('label');
-              } else {
-                thText = $(tableRow).find('th').eq(tdIndex).text();
-              }
-              $(this).attr('data-label', thText + ':');
-            });
-          });
-        });
-      </script>
 </body>
 
 </html>
