--- a/non-traders.html
+++ b/non-traders.html
@@ -30,36 +30,23 @@
 
     <div class="row px-5 pt-4">
       <div class="table-white table-responsive-sm">
-        <table class="custable js-table-data">
+        <table>
           <thead>
             <tr>
-
-              <th class="th-md pr-2">
-                Client name (average)
-              </th>
-              <th class="th-sm pr-2">
-                Region
-              </th>
-              <th class="th-md pr-2">
-                Trading with LCP
-              </th>
-              <th class="th-md pr-2">
-                Driver name
-              </th>
-              <th class="th-lg pr-2">
-                Feedback score from last 6 weeks
-              </th>
-              <th class="th-md pr-2">
-                No Tickets raised
-              </th>
-              <th class="th-lg pr-2">
-                Outstanding Claims
-              </th>
+              <th class="pr-2"></th>
+              <th class="th-md">Client name (average)</th>
+              <th class="th-sm">Region</th>
+              <th class="th-md">Trading with LCP</th>
+              <th class="th-md">Driver name</th>
+              <th class="th-lg">Feedback score from last 6 weeks</th>
+              <th class="th-md">No Tickets raised</th>
+              <th class="th-lg">Outstanding Claims</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+              <td><i class="far fa-frown mr-2 orange-text"></i></td>
+              <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
               <td>Irving Nattrass</td>
@@ -68,7 +55,8 @@
               <td>Yes (3)</td>
             </tr>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+              <td><i class="far fa-frown mr-2 orange-text"></i></td>
+              <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
               <td>Irving Nattrass</td>
@@ -77,7 +65,8 @@
               <td>Yes (3)</td>
             </tr>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+              <td><i class="far fa-frown mr-3 orange-text"></i></td>
+              <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
               <td>Irving Nattrass</td>
@@ -86,7 +75,8 @@
               <td>Yes (3)</td>
             </tr>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i>FE Maughans (4.3)</td>
+              <td><i class="far fa-frown mr-2 orange-text"></i></td>
+              <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
               <td>Irving Nattrass</td>
@@ -101,28 +91,6 @@
     </div>
 
   </div><!-- <div class="modal-body"> -->
-
-  <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-  <!-- <script src='responsive-table.js'></script> -->
-
-  <script>
-    $(document).ready(function() {
-      $('.js-table-data').each(function() {
-        table = $(this);
-        tableRow = table.find('tr');
-        table.find('td').each(function() {
-          tdIndex = $(this).index();
-          if ($(tableRow).find('th').eq(tdIndex).attr('data-label')) {
-            thText = $(tableRow).find('th').eq(tdIndex).data('label');
-          } else {
-            thText = $(tableRow).find('th').eq(tdIndex).text();
-          }
-          $(this).attr('data-label', thText + ':');
-        });
-      });
-    });
-  </script>
-
 </body>
 
 </html>
