--- a/client_reviews.html
+++ b/client_reviews.html
@@ -28,41 +28,26 @@
     </div>
     <!-- END HEADER -->
 
-    <div class="row">
-      <div class="col-xl-12">
-        <table class="table-white custable js-table-data">
-
+    <div class="row px-5">
+      <div class="col-sm">
+        <table class="table-white">
           <thead>
             <tr>
-              <th class="text-center-bold th-md">
-                <h6>Date</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>Client Name (average)</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>Region</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>Trading with LCP</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>Ticket reference</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>Type of ticket</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>LCP CS</h6>
-              </th>
-              <th class="text-center-bold th-md">
-                <h6>Star rating</h6>
-              </th>
+              <th>&nbsp;</th>
+              <th class="text-center-bold th-md">Date</th>
+              <th class="text-center-bold th-md">Client Name (average)</th>
+              <th class="text-center-bold th-md">Region</th>
+              <th class="text-center-bold th-md">Trading with LCP</th>
+              <th class="text-center-bold th-md">Ticket reference</th>
+              <th class="text-center-bold th-md">Type of ticket</th>
+              <th class="text-center-bold th-md">LCP CS</th>
+              <th class="text-center-bold th-md">Star rating</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -72,7 +57,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -82,7 +68,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -92,7 +79,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -102,7 +90,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -112,7 +101,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -122,7 +112,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -132,7 +123,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -142,7 +134,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -152,7 +145,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -162,7 +156,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -172,7 +167,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -182,7 +178,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -192,7 +189,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -202,17 +200,8 @@
               <td class="text-center px-2">2.0</td>
             </tr>
             <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
-              <td class="text-center px-2">FE Maughans (4.3)</td>
-              <td class="text-center px-2">North East</td>
-              <td class="text-center px-2">1053 days</td>
-              <td class="text-center px-2">LCP 34567</td>
-              <td class="text-center px-2">Where is my parcel</td>
-              <td class="text-center px-2">Rachel Heads</td>
-              <td class="text-center px-2">2.0</td>
-            </tr>
-            <tr>
-              <td class="text-center px-2"><span style="color:#ff4b00;" class="pr-1">&#9734;</span>01.01.2019</td>
+              <td class="pl-5"><span style="color:#ff4b00;" class="pr-1">&#9734;</span></td>
+              <td class="text-center px-2">01.01.2019</td>
               <td class="text-center px-2">FE Maughans (4.3)</td>
               <td class="text-center px-2">North East</td>
               <td class="text-center px-2">1053 days</td>
@@ -228,27 +217,6 @@
     </div>
 
   </div><!-- <div class="modal-body"> -->
-
-          <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-          <!-- <script src='responsive-table.js'></script> -->
-
-          <script>
-            $(document).ready(function() {
-              $('.js-table-data').each(function() {
-                table = $(this);
-                tableRow = table.find('tr');
-                table.find('td').each(function() {
-                  tdIndex = $(this).index();
-                  if ($(tableRow).find('th').eq(tdIndex).attr('data-label')) {
-                    thText = $(tableRow).find('th').eq(tdIndex).data('label');
-                  } else {
-                    thText = $(tableRow).find('th').eq(tdIndex).text();
-                  }
-                  $(this).attr('data-label', thText + ':');
-                });
-              });
-            });
-          </script>
 </body>
 
 </html>
