--- a/driver-app-non-compliance.html
+++ b/driver-app-non-compliance.html
@@ -28,16 +28,16 @@
     </div>
     <!-- END HEADER -->
 
-    <div class="row">
-      <div class="col-xl-12">
-        <table class="table-white table-responsive">
+    <div class="row px-5">
+      <div class="col-sm">
+        <table class="table-white table-responsive danc">
           <thead>
             <tr>
-              <th class="px-5 py-2 th-lg">&nbsp;</th>
-              <th class="px-5 text-center py-2 th-md">Last used</th>
-              <th class="px-5 text-center py-2 th-md">No. Weeks since use</th>
-              <th class="px-5 text-center py-2 th-md">No. Parcels not photographed</th>
-              <th class="px-5 text-center py-2 th-md">Digital receipts not sent</th>
+              <th class="th-lg">&nbsp;</th>
+              <th class="text-center th-lg">Last used</th>
+              <th class="text-center th-lg">No. Weeks since use</th>
+              <th class="text-center th-lg">No. Parcels not photographed</th>
+              <th class="text-center th-lg">Digital receipts not sent</th>
             </tr>
           </thead>
           <tbody>
