--- a/highest-use-of-ticket.html
+++ b/highest-use-of-ticket.html
@@ -29,22 +29,22 @@
     <!-- END HEADER -->
 
     <div class="row px-0">
-      <div class="col-xl-12">
+      <div class="col-sm">
         <h4>Top 30 Clients</h4>
       </div>
     </div>
 
-    <div class="row px-5 pt-4">
-      <div class="table-white table-responsive-sm">
-        <table class="custable js-table-data">
+    <div class="row px-5">
+      <div class="table-white table-responsive-sm nt">
+        <table>
           <thead>
             <tr>
               <th>&nbsp;</th>
               <th class="th-md">Client name</th>
-              <th class="th-sm">Region</th>
+              <th class="th-md">Region</th>
               <th class="th-md">Trading with LCP</th>
               <th class="th-md">Number of Shipments</th>
-              <th class="th-sm">No. Tickets</th>
+              <th class="th-md">No. Tickets</th>
               <th class="th-sm">% Ratio</th>
               <th class="th-lg">Average Messages per ticket</th>
               <th class="th-md">Most frequent subject</th>
@@ -52,7 +52,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text pr-2"></i></td>
+              <td><i class="far fa-frown mr-2 orange-text pl-5"></i></td>
               <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
