--- a/non-traders.html
+++ b/non-traders.html
@@ -28,14 +28,14 @@
     </div>
     <!-- END HEADER -->
 
-    <div class="row px-5 pt-4">
-      <div class="table-white table-responsive-sm">
+    <div class="row px-5">
+      <div class="table-white table-responsive-sm nt">
         <table>
           <thead>
             <tr>
               <th class="pr-2"></th>
               <th class="th-md">Client name (average)</th>
-              <th class="th-sm">Region</th>
+              <th class="th-md">Region</th>
               <th class="th-md">Trading with LCP</th>
               <th class="th-md">Driver name</th>
               <th class="th-lg">Feedback score from last 6 weeks</th>
@@ -45,7 +45,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i></td>
+              <td><i class="far fa-frown mr-2 orange-text pl-5"></i></td>
               <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
@@ -55,7 +55,7 @@
               <td>Yes (3)</td>
             </tr>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i></td>
+              <td><i class="far fa-frown mr-2 orange-text pl-5"></i></td>
               <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
@@ -65,7 +65,7 @@
               <td>Yes (3)</td>
             </tr>
             <tr>
-              <td><i class="far fa-frown mr-3 orange-text"></i></td>
+              <td><i class="far fa-frown mr-2 orange-text pl-5"></i></td>
               <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
@@ -75,7 +75,7 @@
               <td>Yes (3)</td>
             </tr>
             <tr>
-              <td><i class="far fa-frown mr-2 orange-text"></i></td>
+              <td><i class="far fa-frown mr-2 orange-text pl-5"></i></td>
               <td>FE Maughans (4.3)</td>
               <td>North East</td>
               <td>1053 days</td>
