--- a/network-efficiency-summary.html
+++ b/network-efficiency-summary.html
@@ -28,7 +28,7 @@
     </div>
     <!-- END HEADER -->
 
-    <div class="row py-2">
+    <div class="row px-5">
       <div class="col-xl-4 pt-4">
         <h4>Overall Van Contribution: &#163;23,000.00</h4>
         <h4>Van Operation cost: &#163;20,000.00</h4>
